[package]
name = "pas-broadcaster"
version = "0.2.0"
edition = "2021"
description = "Native IGMP multicast RTP L16 audio broadcaster for Public Address System announcements"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
crossbeam-channel = "0.5"
dark-light = "2.0"
directories = "5.0"
ffmpeg-sidecar = "2.5.2"
get_if_addrs = "0.5"
iced = { version = "0.14", features = ["tokio", "image"] }
rand = "0.8"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm"] }
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
